main/default/objects/Vehicle__c/fields/Body_Style__c.field-meta.xml
<CustomField>
    <fullName>Body_Style__c</fullName>
    <description>The vehicle body style</description>
    <formula>Model__r.Body_Style__c</formula>
    <inlineHelpText>The vehicle body style</inlineHelpText>
    <label>Body Style</label>
    <type>Text</type>
</CustomField>