main/default/objects/Vehicle__c/fields/Dealer2__c.field-meta.xml
<CustomField>
    <fullName>Dealer2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Business_Mechanic__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>