main/default/objects/Vehicle__c/fields/Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>Drive_Type__c</fullName>
    <description>The vehicle drive type</description>
    <formula>Model__r.Drive_Type__c</formula>
    <inlineHelpText>The vehicle drive type</inlineHelpText>
    <label>Drive Type</label>
    <type>Text</type>
</CustomField>