main/default/objects/Vehicle__c/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <description>the vehicle engine</description>
    <formula>Model__r.Engine__c</formula>
    <inlineHelpText>the vehicle engine</inlineHelpText>
    <label>Engine</label>
    <type>Text</type>
</CustomField>