main/default/objects/Vehicle__c/fields/Engine_Number__c.field-meta.xml
<CustomField>
    <fullName>Engine_Number__c</fullName>
    <description>The car engine number</description>
    <label>Engine Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>