main/default/objects/Vehicle__c/fields/Initial_Odometer__c.field-meta.xml
<CustomField>
    <fullName>Initial_Odometer__c</fullName>
    <description>The initial odometer of the car when it was purchased</description>
    <label>Initial Odometer</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>