main/default/objects/Vehicle__c/fields/Key_Cutting_Code__c.field-meta.xml
<CustomField>
    <fullName>Key_Cutting_Code__c</fullName>
    <description>The key cutting code used when programming the car key remote</description>
    <label>Key Cutting Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>