main/default/objects/Vehicle__c/fields/Key_Security_PIN__c.field-meta.xml
<CustomField>
    <fullName>Key_Security_PIN__c</fullName>
    <description>The pin code used when programming the car key remote</description>
    <label>Key Security PIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>