main/default/objects/Vehicle__c/fields/License_Plate__c.field-meta.xml
<CustomField>
    <fullName>License_Plate__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The plate number of the vehicle</description>
    <inlineHelpText>The plate number of the vehicle</inlineHelpText>
    <label>License Plate</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>