main/default/objects/Vehicle__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>The vehicle make</description>
    <inlineHelpText>The vehicle make</inlineHelpText>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Nissan</fullName>
            </value>
            <value>
                <fullName>Puegeot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>