main/default/objects/Vehicle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The vehicle model</description>
    <inlineHelpText>The vehicle model</inlineHelpText>
    <label>Model</label>
    <referenceTo>Vehicle_Model__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>