main/default/objects/Vehicle__c/fields/Owned__c.field-meta.xml
<CustomField>
    <fullName>Owned__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifies if the Vehicle is still under your possession</description>
    <inlineHelpText>Identifies if the Vehicle is still under your possession</inlineHelpText>
    <label>Owned</label>
    <type>Checkbox</type>
</CustomField>