main/default/objects/Vehicle__c/fields/Purchased_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Date__c</fullName>
    <description>The date when the car was purchased</description>
    <label>Purchased Date</label>
    <type>Date</type>
</CustomField>