main/default/objects/Vehicle__c/fields/Registration_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Due_Date__c</fullName>
    <description>The vehicle registration Due Date</description>
    <inlineHelpText>The vehicle registration Due Date</inlineHelpText>
    <label>Registration Due Date</label>
    <type>Date</type>
</CustomField>