main/default/objects/Vehicle__c/fields/Remote__c.field-meta.xml
<CustomField>
    <fullName>Remote__c</fullName>
    <description>The remote code used when programming the car key remote</description>
    <label>Remote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>