main/default/objects/Vehicle__c/fields/Sub_Model__c.field-meta.xml
<CustomField>
    <fullName>Sub_Model__c</fullName>
    <description>The vehicle sub model</description>
    <formula>Model__r.Sub_Model__c</formula>
    <inlineHelpText>The vehicle sub model</inlineHelpText>
    <label>Sub Model</label>
    <type>Text</type>
</CustomField>