main/default/objects/Vehicle__c/fields/Tank_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Tank_Capacity__c</fullName>
    <description>The vehicle tank capacity</description>
    <formula>Model__r.Tank_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The vehicle tank capacity</inlineHelpText>
    <label>Tank Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>