main/default/objects/Vehicle__c/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <description>The vehicle transmission</description>
    <formula>Model__r.Transmission__c</formula>
    <inlineHelpText>The vehicle transmission</inlineHelpText>
    <label>Transmission</label>
    <type>Text</type>
</CustomField>