main/default/objects/Vehicle__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The vehicle type</description>
    <inlineHelpText>The vehicle type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Heavy Truck</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Ute</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>