main/default/objects/Vehicle__c/fields/WOF_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>WOF_Due_Date__c</fullName>
    <description>The vehicle warranty of fitness due date</description>
    <inlineHelpText>The vehicle warranty of fitness due date</inlineHelpText>
    <label>WOF Due Date</label>
    <type>Date</type>
</CustomField>